k8s/Kraken/krakend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
  namespace: krakend
spec:
  selector:
    app: krakend
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
