k8s/Kraken/krakend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: krakend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: krakend.hivemet.com   # <-- REPLACE with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend-service
                port:
                  number: 80
